<resources>
    <string name="app_name">Krishi-Seva</string>
    <string name="krishi_seva">Krishi Seva</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_signup">Create an Account? SIGNUP</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="title_activity_crop_value">CropValueActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_government_schemes">GovernmentSchemesActivity</string>
</resources>